# chatgpt-axum-warpper

./: .env  Cargo.toml  README.md  db.sql
src/: lib.rs
src/database/: db.rs  mod.rs  user.rs
src/service/: auth.rs  idl.rs  mod.rs  openai.rs  user.rs
