[package]
name = "gpt-axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.15", features = ["headers"] }
axum-macros = "0.3.7"
dotenv = "0.15.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.16", features = ["stream"] }
reqwest-eventsource = "0.4.0"
sea-orm = { version = "0.11.2", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "macros"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tiktoken-rs = "0.4.0"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
